# nectar

./: .env.example  .gitignore  CLAUDE.md  LICENSE-NOTES.md  NOTICE  README.md  rules.txt  start.sh  stop.sh
.github/workflows/: ci.yml
contract/: DATA_CONTRACT.md  pyproject.toml
contract/nectar_contract/: __init__.py  names.py  types.py
contract/schema/: schema.cypher
deploy/: README.md
deploy/caddy/: Caddyfile
deploy/compose/: podman-compose.yml
deploy/neo4j/: init-roles.cypher
deploy/quadlet/: caddy.container  nectar-api.container  nectar-web.container  nectar-writeback.container  nectar.network  neo4j.container  nutriscrape-flow.container  nutriscrape.container  ollama.container
deploy/runbooks/: full-reingest.md
deploy/scripts/: full-reingest.sh
nectar/: CLAUDE.md  Containerfile  Makefile  pyproject.toml
nectar/config/: equations.yaml  settings.yaml
nectar/config/conditions/: cad.yaml  ckd.yaml  htn.yaml  oxalate_stones.yaml  t2dm.yaml  transplant.yaml
nectar/config/interactions/: immunosuppressants.yaml
nectar/docs/: PDD.md  SDD.md
nectar/src/nectar/: __init__.py
nectar/src/nectar/abstraction/: confirm.py  derive.py  intake.py  parse_history.py  thresholds.py
nectar/src/nectar/api/: app.py  deps.py  schemas.py
nectar/src/nectar/api/routes/: ask.py  catalog.py  plan.py  recommend.py  research.py  settings.py
nectar/src/nectar/common/: config.py  contract_client.py  runtime_settings.py
nectar/src/nectar/engine/: constraints.py  evaluate.py  rank.py  recommend.py  remediate.py
nectar/src/nectar/interact/: explain.py  modify.py  qa.py
nectar/src/nectar/llm/: backends.py
nectar/src/nectar/plan/: mealplan.py
nectar/src/nectar/present/: disclaimer.py  serving.py  units.py
nectar/src/nectar/research/: hypotheses.py  verify.py  writeback_app.py  writeback_service.py
nectar/src/nectar/scoring/: conflicts.py  suitability.py
nectar/tests/clinical/: test_abstraction.py  test_conflicts.py  test_engine.py  test_explain.py  test_food_safety_exclusions.py  test_writeback.py  test_writeback_graph.py
nectar/tests/integration/: test_api.py
nectar/tests/unit/: test_config.py  test_contract_client.py  test_interact_plan.py  test_present.py  test_runtime_settings.py
nectar/web/: .gitignore  Containerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
nectar/web/src/: App.tsx  api.ts  main.tsx  nutrients.ts  styles.css  types.ts  vite-env.d.ts
nectar/web/src/components/: AskPanel.tsx  BoundaryBanner.tsx  ComposeSection.tsx  ConfirmView.tsx  EvidencePanel.tsx  GroceryList.tsx  MealPlanner.tsx  NutritionPanel.tsx  ProfileBuilder.tsx  RecipeBrowser.tsx  RecipeView.tsx  RecommendSetup.tsx  Results.tsx  SettingsPanel.tsx  Sidebar.tsx  VideosSection.tsx
nutriscrape/: CLAUDE.md  Containerfile  Makefile  pyproject.toml
nutriscrape/config/: attributes.yaml  fdc_nutrient_map.yaml  food_aliases.yaml  food_class.yaml  measures.yaml  method_coverage.yaml  nutrients.yaml  retention.yaml  sources.yaml
nutriscrape/config/samples/: recipes_sample.csv
nutriscrape/config/transforms/: README.md  mineral_leaching.yaml
nutriscrape/docs/: PDD.md  SDD.md
nutriscrape/src/nutriscrape/: __init__.py  __main__.py  pipeline.py
nutriscrape/src/nutriscrape/acquisition/: parse.py
nutriscrape/src/nutriscrape/acquisition/adapters/: base.py  datasets.py  structured.py
nutriscrape/src/nutriscrape/bulk/: __init__.py  export.py  food_index.py  load.py  materialize.py
nutriscrape/src/nutriscrape/clustering/: blocking.py  fingerprint.py  resolve.py  score.py
nutriscrape/src/nutriscrape/common/: confidence.py  config.py  provenance.py  units.py
nutriscrape/src/nutriscrape/extraction/: ingredients.py  models.py  preparation.py
nutriscrape/src/nutriscrape/graph/: client.py  readers.py  schema.py  writers.py
nutriscrape/src/nutriscrape/knowledge/: draft.py  loaders.py
nutriscrape/src/nutriscrape/nutrition/: compose.py  distribution.py  measures.py  normalize.py  transform.py  variants.py
nutriscrape/src/nutriscrape/orchestration/: __init__.py  flows.py
nutriscrape/src/nutriscrape/resolution/: fdc_bulk.py  fdc_client.py  matcher.py  nutrient_map.py
nutriscrape/tests/clinical/: test_bulk_materialize.py  test_cluster_slice.py  test_dish_stats_slice.py  test_ingest_slice.py  test_materialize_slice.py  test_method_carryover.py  test_prep_linkage.py  test_serving_facts.py  test_transform.py
nutriscrape/tests/fixtures/fdc/: food.csv  food_nutrient.csv  nutrient.csv
nutriscrape/tests/integration/: test_flow.py  test_neo4j_roundtrip.py
nutriscrape/tests/unit/: test_alt_methods.py  test_basic_parse.py  test_bulk.py  test_cli.py  test_client_batch.py  test_compose.py  test_config_paths.py  test_datasets_adapter.py  test_ddl_split.py  test_distribution.py  test_fdc_bulk.py  test_kb_writers.py  test_knowledge.py  test_matcher.py  test_measures.py  test_nutrient_map.py  test_orchestration.py  test_preparation.py  test_pure_logic.py  test_readers.py  test_structured.py  test_writers.py
