[project]
name = "nectar"
version = "0.1.0"
description = "NECTAR platform clinician-facing application"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "neo4j>=5",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pyyaml>=6",
  "sentence-transformers>=2.2",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "testcontainers[neo4j]"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "../contract"

# Third-party libraries without type stubs. We keep strict typing on our own code; these are
# optional/untyped runtime deps (LLM SDKs, embeddings, YAML) imported behind our own typed wrappers.
[[tool.mypy.overrides]]
module = ["anthropic.*", "openai.*", "sentence_transformers.*", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nectar*"]
