[project]
name = "nutriscrape"
version = "0.1.0"
description = "NECTAR platform data engine"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "neo4j>=5",
  "recipe-scrapers>=15",
  "requests>=2.31",
  "pyyaml>=6",
  "sentence-transformers>=2.2",
  "prefect>=2",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "testcontainers[neo4j]"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "../contract"

# Third-party libraries without type stubs. Our own code stays strictly typed; these untyped
# runtime deps (embeddings, orchestration, scrapers, HTTP, YAML) sit behind our typed wrappers.
[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "prefect.*", "recipe_scrapers.*", "requests.*", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
