[project]
name = "nutriscrape"
version = "0.1.0"
description = "NECTAR platform data engine"
authors = [
  {name = "Ronald Rodriguez, MD, PhD"},
  {name = "UT Health San Antonio"},
]
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "neo4j>=5",
  "recipe-scrapers>=15",
  "requests>=2.31",
  "pyyaml>=6",
  "sentence-transformers>=2.2",
  "prefect>=2",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "testcontainers[neo4j]"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "../contract"

# Third-party libraries without type stubs. Our own code stays strictly typed; these untyped
# runtime deps (embeddings, orchestration, scrapers, HTTP, YAML) sit behind our typed wrappers.
[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "prefect.*", "recipe_scrapers.*", "requests.*", "yaml"]
ignore_missing_imports = true

# Prefect is treated as untyped (ignore_missing_imports above), so its @flow/@task decorators are
# Any; relax only the untyped-decorator check for the orchestration module that uses them.
[[tool.mypy.overrides]]
module = ["nutriscrape.orchestration.*"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nutriscrape*"]
